[package]
build = "build.rs"
description = "Input / output interfaces, implementations, and utilities for the rstm framework "
name = "rstm-tape"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doc = true
doctest = false
test = true

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "tape"
required-features = ["alloc"]

# ********* [Package Metadata] *********
[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"


# ********* [Dependencies] *********
[dependencies]
# local
rstm-core = { workspace = true }
rstm-state = { workspace = true }
# custom
variants = { workspace = true }
# error-handling
thiserror = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros & utilities
smart-default = { workspace = true }
strum = { workspace = true }
# logging
tracing = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
tracing-subscriber = { features = ["std"], workspace = true }

[features]
default = [
  "std",
]

full = [
  "default",
  "serde",
  "tracing",
]

# ********* [FF] Features *********
nightly = [
  "rstm-core/nightly",
  "rstm-state/nightly",
]

json = [
  "alloc",
  "serde",
  "rstm-core/json",
  "rstm-state/json",
]

# ************* [FF:Environments] *************

std = [
  "alloc",
  "rstm-core/std",
  "rstm-state/std",
  "variants/std",
  "serde?/std",
  "strum/std",
  "thiserror/std",
  "tracing?/std",
]

wasi = [
  "alloc",
  "rstm-core/wasi",
  "rstm-state/wasi",
]

wasm = [
  "alloc",
  "wasm-bindgen",
  "rstm-core/wasm",
  "rstm-state/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "rstm-core/alloc",
  "rstm-state/alloc",
  "variants/alloc",
  "serde?/alloc",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "rstm-core/serde",
  "rstm-state/serde",
]

serde_json = [
  "dep:serde_json",
  "serde?/std",
  "rstm-core/serde_json",
  "rstm-state/serde_json",
]

tracing = ["dep:tracing"]

wasm-bindgen = ["dep:wasm-bindgen"]
