[package]
build = "build.rs"
description = "A generic state implementation and its supporting interfaces"
name = "rstm-state"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
doc = true
doctest = false
test = true

[dependencies]
rstm-traits = { workspace = true }
# custom
contained = { features = ["macros"], workspace = true }
# concurrency / parallelism
rayon = { optional = true, workspace = true }
# data structures
bytes = { optional = true, workspace = true }
hashbrown = { optional = true, workspace = true }
# error-handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# numbers
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# random
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros & utilities
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
# logging
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["macros", "std"]

full = [
  "default",
  "complex",
  "hashbrown",
  "json",
  "rand",
  "serde",
]

# ********* [FF] Features *********

json = [
  "alloc",
  "serde",
  "serde_json",
]

macros = []

nightly = [
  "rstm-traits/nightly",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "anyhow/std",
  "contained/std",
  "rstm-traits/std",
  "rand?/std",
  "rand?/default",
  "rand_distr?/std",
  "serde?/std",
  "serde_json?/std",
  "strum/std",
  "num-traits/std",
  "thiserror/std",
]

wasi = [
  "rstm-traits/wasi",
]

wasm = [
  "wasm_bindgen",
  "getrandom?/wasm_js",
  "rayon?/web_spin_lock",
  "rstm-traits/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
  "contained/alloc",
  "rand?/alloc",
  "rand_distr?/alloc",
  "rstm-traits/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
]

bytes = ["dep:bytes"]

complex = [
  "dep:num-complex",
  "rstm-traits/complex",
]

hashbrown = [
  "dep:hashbrown",
  "rstm-traits/hashbrown",
]

rand = [
  "dep:rand",
  "dep:rand_distr",
  "rng",
  "num-complex?/rand",
]

rayon = [
  "dep:rayon",
  "hashbrown?/rayon",
  "rstm-traits/rayon",
]

rng = [
  "dep:getrandom",
  "rand?/os_rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "bytes?/serde",
  "hashbrown?/serde",
  "num-complex?/serde",
  "rand?/serde",
  "rand_distr?/serde",
  "rstm-traits/serde",
]

serde_json = ["dep:serde_json"]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "rstm-traits/wasm_bindgen",
]
