[package]
build = "build.rs"
name = "rstm-traits"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
doc = true
doctest = false
test = true

[dependencies]
# custom
rspace-traits = { workspace = true }
# concurrency / parallelism
rayon = { optional = true, workspace = true }
# data structures
bytes = { optional = true, workspace = true }
hashbrown = { optional = true, workspace = true }
# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# math
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }
# utilities
paste = { workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "bytes",
  "complex",
  "hashbrown",
  "rand",
  "serde",
]

nightly = [
  "hashbrown?/nightly",
  "rspace-traits/nightly",
]

# ********* [FF] Environments *********

std = [
  "alloc",
  "anyhow/std",
  "bytes?/std",
  "hashbrown?/default",
  "rspace-traits/std",
  "serde?/std",
  "thiserror/std",
  "wasm-bindgen?/std",
]

wasi = [
  "rspace-traits/wasi",
]

wasm = [
  "wasm_bindgen",
  "rayon?/web_spin_lock",
  "rspace-traits/wasm",
]

# ********* [FF] Dependencies *********

alloc = [
  "hashbrown?/alloc",
  "rspace-traits/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "wasm-bindgen?/gg-alloc",
]

bytes = ["dep:bytes"]

complex = [
  "dep:num-complex",
  "rspace-traits/complex",
]

rand = [
  "rspace-traits/rand",
]

rayon = [
  "dep:rayon",
  "hashbrown?/rayon",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "bytes?/serde",
  "hashbrown?/serde",
  "num-complex?/serde",
  "rspace-traits/serde",
]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "rspace-traits/wasm_bindgen",
]
